--- a/02-data-operations.Rmd
+++ b/02-data-operations.Rmd
@@ -294,34 +294,5 @@ top_genera
 Since there are several taxa unclassified at Genus level, we get different taxonomic levels?  
 It is a challenge to deal with high number of missing values within this hierarchical data, especially as we go to lower taxonomic ranks.   
 
-## Taxonomic labels  
 
-```{r tax-labels-1}
-getTaxonomyLabels(me)[1:10]
-```
-
-Get assay and label best available taxonomic classification.   
-```{r tax-labels-2}
-feature_tab <- assay(me, "counts")
-
-# change IDs to best available taxonomic classification
-rownames(feature_tab) <- getTaxonomyLabels(me)
-feature_tab[1:6,1:6]
-```
-
-How can we store this ? or Change rownames in rowData and assays to use best taxonomic classification instead of some non-informative IDs e.g. "549656","331820" or "ASV001", "ASV002" ?  
-
-Check heatmap  
-```{r tax-labels-heatmap-1}
-
-pheatmap(feature_tab[26:50,1:20])
-
-```
-
-Without processing  
-
-```{r tax-labels-heatmap-2}
-pheatmap(assay(me, "counts")[26:50,1:20])
-```
-
-First heatmap is more informative than second.  
+[Pull reference to pull where this is discussed](https://github.com/FelixErnst/mia/pull/13)
