prevalence analyses added

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Microbiome Analysis"
-author: ""
+author: "Felix Ernst, Leo Lahti"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
