--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -5,7 +5,7 @@
 
 Install the development version from GitHub using `remotes` R package.  
 
-```{r eval=FALSE}
+```{r eval=TRUE, message=FALSE}
 # install remotes 
 #install.packages("remotes")
 remotes::install_github("FelixErnst/mia")
