--- a/02-data-operations.Rmd
+++ b/02-data-operations.Rmd
@@ -1,20 +1,24 @@
 
-# Data operations {#Data-operations}  
+# Data operations {#Data-operations}    
 
-## Common terminologies  
+The [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html) (`SE`) is a widely used class for analyzing data obtained by common sequencing techniques. `SE` is common structure for several Bioconductor packages that are used for analyzing RNAseq, ChIp-Seq data. `SE` class is also used in R packages for analyzing microarrays, flow cytometry, proteomics, single-cell sequencing data and many more. The single-cell analysis is facilitated by [SingelCellExperiment class](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) (`SCE`), which allows the user to store results of dimensionality reduction and alternative experiments. Alternative experiments (`altExps`) can be differently processed data within the analysis workflows. 
 
-The `mia` package uses classes defined by [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html), [`MicrobiomeExperiment`](https://github.com/FelixErnst/MicrobiomeExperiment) and in general [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html).  
+Recently, [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) (`TSE`), [`MicrobiomeExperiment`](https://github.com/FelixErnst/MicrobiomeExperiment) were developed to extend the `SE` and `SCE` class for incorporating hierarchical information (including phylogenetic tree) and reference sequences.    
 
-`assays`     : Similar to `otu_table` in `phyloseq`. An `SummarizedExperiment` object 
-               can hold multiple assays, raw counts, transformed counts. See also 
-               [`MultiAssayExperiment`](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html)    
-`rowData`    : Slot similar to `tax_table` in `phyloseq` consisting of taxonomic information.     
-`colData`    : Slot similar to `sample_data` in `phyloseq` consisting of information related to samples.    
-`rowTree`    : Slot for phylogenetic tree. Similar to `phy_tree` in `phyloseq`   
+The `mia` package implements tools using these classes for analysis of microbiome sequencing data.       
+
+## Common terminologies    
+
+`assays`     : This slot is similar to `otu_table` in `phyloseq`. In a `SummarizedExperiment`
+               object multiple assays, raw counts, transformed counts can be stored. See also 
+               [`MultiAssayExperiment`](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) for storing data from multiple `assays` such as RNASeq, Proteomics, etc.       
+`rowData`    : This slot is similar to `tax_table` in `phyloseq` to store taxonomic information.     
+`colData`    : This slot is similar to `sample_data` in `phyloseq` to store information related to samples.    
+`rowTree`    : This slot is similar to `phy_tree` in `phyloseq` to store phylogenetic tree.     
 
 In this book, you will come across terms like `FeatureIDs` and `SampleIDs`.   
-`FeatureIDs` : These are row names in `assays` and `rowData`. This is basically OTU/ASV ids.  
-`SampleIDs`  : These are column names in `assays` and row names in `colData`.   
+`FeatureIDs` : These are basically OTU/ASV ids which are row names in `assays` and `rowData`.    
+`SampleIDs`  : As the name suggests, these are sample ids which are column names in `assays` and row names in `colData`.   
 
 
 ## Retrieving data elements  
@@ -28,7 +32,7 @@ library(ggplot2)
 library(tibble)
 ```
 
-Example data  
+Example data   
 ```{r data}
 
 data("GlobalPatterns")
@@ -41,12 +45,15 @@ me <- relAbundanceCounts(GlobalPatterns)
 me
 ```
 
-Above there are now two `assays` 1] counts 2] relabundance
+Above there are now two `assays`  
+1] counts  
+2] relabundance  
 
-## Extract specific elements  
+## Extract specific elements   
 
 ### Assays  
-Assay slots hold the counts and transformed data for `FeatureIDs`
+`Assay` slots hold the counts and transformed data for `FeatureIDs` and these can be extracted as follows:  
+Extract count abundance data.
 ```{r assay-1}
 
 me_counts <- assay(me, "counts")
@@ -61,7 +68,7 @@ me_reab[1:5,1:7]
 
 
 ### colData  
-Get colData as a data.frame.   
+The sample information can be retrieved by accessing the `colData` as a data.frame.   
 ```{r coldata}
 me_sample_data <- colData(me) %>% 
     as.data.frame()
@@ -71,7 +78,7 @@ me_sample_data[1:5,1:5]
 
 
 ### rowData  
-Get rowData as a data.frame  
+The taxonomic classification of `FeatureIds` can be retrieved by accessing the `rowData` as a data.frame.   
 ```{r rowdata}
 
 me_row_data <- rowData(me) %>% 
@@ -82,12 +89,13 @@ me_row_data[1:5,1:5]
 
 
 ### rowTree  
-Get rowTree     
+The phylogenetic tree for `FeatureIds` can be retrieved by accessing the `rowTree` which is a `phylo` object.       
 ```{r rowtree}
 me_row_tree <- rowTree(me) 
 me_row_tree
 ```
-Check link between rownames (OTU/ASV ids)
+
+Check link between rownames `FeatureIds`.  
 ```{r rowlink}
 # extract the linkData
 # on rows
@@ -96,8 +104,7 @@ rowL <- rowLinks(x = me)
 
 ## Library size   
 
-Get total counts/sample  
-see `microbiome::readcount`.  
+The total counts/sample can be calculated using the `colSums`.    
 
 ```{r lib-size}
 
@@ -146,18 +153,19 @@ me_fam_reab <- assay(me_fam, "counts")
 me_fam_reab[1:5,1:7]
 ```
 
-These data can also be kept in 
+These newly created data can also be kept in `altExp` a feature provided by `SingleCellExperiment`.    
 
 ```{r altExp-1}
 altExp(me, "family") <- me_fam
 ```
-`altExpNames` now consists of `family` level data. This can be extended to use any level present in `r taxonomyRanks(me)`  
+`altExpNames` now consists of `family` level data. This can be extended to use any level present in `r taxonomyRanks(me)`.   
 
 ## Get unique  
 Get which Phyla are present.  
 ```{r unique-1}
 head(unique(rowData(me)[,"Phylum"]))
 ```
+
 ## Pick specific  
 Retrieving of specific elements are required for specific analysis. For instance, extracting abundances for a specific taxa in all samples or all taxa in one sample.  
 
@@ -184,7 +192,7 @@ taxa.abundances[1:10]
 
 ## Join  
 
-Joining otu/asv table and taxonomy in one data frame
+Joining `assay` and `rowData` in one data frame for exploring `featureIds` and their taxonomic identities.   
 
 ```{r join-1}
 
@@ -202,7 +210,9 @@ me_joined[1:3,1:8]
 ```
 
 
-### Convert to long data.frame  
+### Convert to long data.frame   
+
+For several custom analysis and visualization packages such as those from the `tidyverse` the `SE` data can be converted to long data.frame format with `meltAssay`.    
 
 ```{r ldf-1}
 
@@ -217,7 +227,8 @@ molten_se <- meltAssay(me,
 ## Get top taxa and taxonomy   
 
 ### Features  
-Can we get taxonomic rank(s) for top features?
+
+The `getTopTaxa` can be used for identifying top taxa in the data.   
 ```{r top-feature-taxo}
 
 top_features <- getTopTaxa(me, method="median", top=10)
