--- a/02-data-operations.Rmd
+++ b/02-data-operations.Rmd
@@ -11,7 +11,7 @@ The `mia` package implements tools using these classes for analysis of microbiom
 
 `assays`     : This slot is similar to `otu_table` in `phyloseq`. In a `SummarizedExperiment`
                object multiple assays, raw counts, transformed counts can be stored. See also 
-               [`MultiAssayExperiment`](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) for storing data from multiple `assays` such as RNASeq, Proteomics, etc.       
+               [`MultiAssayExperiment`](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) for storing data from multiple `experiments` such as RNASeq, Proteomics, etc.       
 `rowData`    : This slot is similar to `tax_table` in `phyloseq` to store taxonomic information.     
 `colData`    : This slot is similar to `sample_data` in `phyloseq` to store information related to samples.    
 `rowTree`    : This slot is similar to `phy_tree` in `phyloseq` to store phylogenetic tree.     
