prevalence examples in the book fixed

--- a/03-concepts.Rmd
+++ b/03-concepts.Rmd
@@ -3,31 +3,32 @@
 
 ## Prevalence
 
-Relative prevalences (population frequencies) at a 1% compositional abundance threshold:
+Population prevalence (frequency) at a 1% relative abundance threshold:
 
 ```{r concepts_prevalence, warning=FALSE, message=FALSE}
 library(mia)
-data(enterotype)
-me <- enterotype # Rename data for generic examples
-head(mia::prevalence(me, detection = 1/100, sort = TRUE))
+data(GlobalPatterns)
+me <- GlobalPatterns # Rename data for generic examples
+head(mia::getPrevalence(me, detection = 1/100, sort = TRUE, as_relative = TRUE))
 ```
 
 
-Absolute population prevalences (sample count):
+Population prevalence (frequency) at the absolute abundance threshold at read count 1:
 
 ```{r concepts_prevalence2}
-head(mia::prevalence(me, detection = 1/100, sort = TRUE, count = TRUE))
+head(mia::getPrevalence(me, detection = 1, sort = TRUE, abund_values = "counts", as_relative = FALSE))
 ```
+
 
 
 ## Prevalent microbiota analysis
 
-If you only need the names of the prevalnt taxa, do as follows. This
+If you only need the names of the prevalent taxa, do as follows. This
 returns the taxa that exceed the given prevalence and detection
 thresholds.
 
 ```{r core-members, message=FALSE, warning=FALSE, eval = FALSE}
-prev <- mia::prevalentMembers(me, detection = 0, prevalence = 50/100)
+prev <- mia::getPrevalentTaxa(me, detection = 0, prevalence = 50/100)
 ```
 
 See also related functions for the analysis of rare and variable taxa (rareMembers; rareAbundance; lowAbundance).  
