--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -1,11 +1,11 @@
 # (PART) Introduction {-}
 
+# Data Infrastructure {#data-introduction}
+
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
-
-# Data Infrastructure {#data-introduction}
 
 The
 [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
@@ -146,7 +146,7 @@ rowTree(se)
 
 The links to the individual features are available through `rowLinks`.
 
-```{r rowlink}
+```{r rowlinks}
 rowLinks(se)
 ```
 
@@ -166,7 +166,7 @@ For several custom analysis and visualization packages such as those from the
 `tidyverse` the `SE` data can be converted to long data.frame format with 
 `meltAssay`.    
 
-```{r ldf-1}
+```{r}
 library(mia)
 molten_se <- meltAssay(se,
                        add_row_data = TRUE,
@@ -176,6 +176,8 @@ molten_se
 ```
 
 ## Conclusion
+
+Some wrapping up...
 
 ## Session Info {-}
 
