--- a/12-quality-control.Rmd
+++ b/12-quality-control.Rmd
@@ -36,18 +36,19 @@ se <- addPerCellQC(se)
 colData(se)
 ```
 
-The calcualted library sizes can be visualized using the `plotColData` function.
+The calulated library sizes can be visualized using the `plotColData` function.
 
-```{r viz-lib-size-1, fig.width=8, fig.height=4}
+```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
 library(ggplot2)
 plotColData(se,"sum","X.SampleID", colour_by = "X.SampleID") + 
     theme(axis.text.x = element_text(angle = 45, hjust=1))
 ```
 
-```{r viz-lib-size-2, fig.width=8, fig.height=4}
+```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample type."}
 plotColData(se,"sum","SampleType", colour_by = "SampleType") + 
     theme(axis.text.x = element_text(angle = 45, hjust=1))
 ```
+
 
 ## Session Info {-}
 
