miaViz to remotes

--- a/11-taxonomic-information.Rmd
+++ b/11-taxonomic-information.Rmd
@@ -36,7 +36,7 @@ These newly created data can also be kept in `altExp` a feature provided by
 `SingleCellExperiment`.    
 
 `altExpNames` now consists of `family` level data. This can be extended to use 
-any level present in `r taxonomyRanks(se)`.   
+any level present in `r mia::taxonomyRanks(se)`.   
 
 ## Get unique  
 
