new sections proposed

--- a/13-microbiome-exploration.Rmd
+++ b/13-microbiome-exploration.Rmd
@@ -21,6 +21,7 @@ library(mia)
 data("GlobalPatterns")
 se <- GlobalPatterns 
 ```
+
 ## Prevalence
 
 Prevalence is a measurements, which describes in how many samples certain
@@ -59,6 +60,41 @@ See also related functions for the analysis of rare and variable taxa
 ### Plotting prevalence
 
 TODO
+
+
+## Alpha diversity
+
+
+
+## Beta diversity
+
+
+### Community comparisons
+
+PERMANOVA and other methods.
+
+
+### Visualizing beta diversity
+
+Ordination with PCoA, UMAP, and other methods.
+
+
+
+## Differential abundance analysis
+
+A number of methods for differential abundance analysis are available,
+and reviewed elsewhere.
+
+
+## Community composition
+
+Heatmaps
+
+
+## Community typing
+
+ - Community State Types (CST)
+ - Dirichlet Multinomial Mixtures (DMM)
 
 
 ## Session Info {-}
