--- a/15-timeseries.Rmd
+++ b/15-timeseries.Rmd
@@ -8,6 +8,9 @@ chapterPreamble()
 This chapter focuses on the exploration of microbiome time series.
 
 
+## Stability
+
+## Tipping elements
 
 
 ## Session Info {-}
