spawned additional sections for microbiome exploration dedicated to special aspects

--- a/17-timeseries.Rmd
+++ b/17-timeseries.Rmd
@@ -1,4 +1,4 @@
-# Microbiome time series {#timeseries}
+# Microbiome time series {#microbiome-timeseries}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
