--- a/index.Rmd
+++ b/index.Rmd
@@ -43,6 +43,11 @@ The third section, *Appendix*, contains the rest of things we didn't find
 another place for, yet.
 
 ```{r include=FALSE}
+# global knitr options
+knitr::opts_chunk$set(
+  fig.width=10,
+  dpi=300
+)
 # automatically create a bib database for R packages
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
