--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -1,4 +1,4 @@
-# Microbiome Exploration {#microbiome-exploration}
+# Microbiome Diversity {#microbiome-diversity}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
