--- a/13-microbiome-exploration.Rmd
+++ b/13-microbiome-exploration.Rmd
@@ -77,8 +77,8 @@ head(getPrevalence(se, rank = "Phylum", detection = 1/100, sort = TRUE,
                    abund_values = "counts", as_relative = TRUE))
 ```
 
-The differnence in the naming scheme, is that by default `na.rm = TRUE` is used
-for agglomoration in `getPrevalence`, whereas the default for 
+The difference in the naming scheme, is that by default `na.rm = TRUE` is used
+for agglomeration in `getPrevalence`, whereas the default for 
 `agglomerateByRank` is `FALSE` to prevent accidental data loss.
 
 If you only need the names of the prevalent taxa, `getPrevalentTaxa` is
