small fixes for taxonomic information

--- a/11-taxonomic-information.Rmd
+++ b/11-taxonomic-information.Rmd
@@ -134,6 +134,7 @@ changing conditions through these levels. For this `mia` contains the
 is as an alternative experiment.
 
 ```{r}
+se <- relAbundanceCounts(se)
 altExp(se, "Family") <- agglomerateByRank(se, rank = "Family",
                                           agglomerateTree = TRUE)
 altExp(se, "Family")
@@ -147,7 +148,6 @@ assayNames(altExp(se, "Family"))
 ```
 
 ```{r}
-altExp(se, "Family") <- relAbundanceCounts(altExp(se, "Family"))
 assay(altExp(se, "Family"), "relabundance")[1:5,1:7]
 ```
   
@@ -169,7 +169,6 @@ in one sample.
 taxa.abund.cc1 <- getAbundanceSample(se, 
                                      sample_id = "CC1",
                                      abund_values = "counts")
-
 taxa.abund.cc1[1:10]
 ```
 
@@ -177,8 +176,8 @@ taxa.abund.cc1[1:10]
 
 ```{r}
 taxa.abundances <- getAbundanceFeature(se, 
-                                      feature_id = "255340",
-                                       abund_values = "counts")
+                                      feature_id = "Phylum:Bacteroidetes",
+                                      abund_values = "counts")
 taxa.abundances[1:10]
 ```
 
