--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,265 @@
+@Manual{R-base,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2020},
+  url = {https://www.R-project.org/},
+}
+
+@Manual{R-Biobase,
+  title = {Biobase: Base functions for Bioconductor},
+  author = {R. Gentleman and V. Carey and M. Morgan and S. Falcon},
+  year = {2020},
+  note = {R package version 2.50.0},
+  url = {https://bioconductor.org/packages/Biobase},
+}
+
+@Manual{R-BiocGenerics,
+  title = {BiocGenerics: S4 generic functions used in Bioconductor},
+  author = {The Bioconductor Dev Team},
+  year = {2020},
+  note = {R package version 0.36.0},
+  url = {https://bioconductor.org/packages/BiocGenerics},
+}
+
+@Manual{R-Biostrings,
+  title = {Biostrings: Efficient manipulation of biological strings},
+  author = {H. Pagès and P. Aboyoun and R. Gentleman and S. DebRoy},
+  year = {2020},
+  note = {R package version 2.58.0},
+  url = {https://bioconductor.org/packages/Biostrings},
+}
+
+@Manual{R-bookdown,
+  title = {bookdown: Authoring Books and Technical Documents with R Markdown},
+  author = {Yihui Xie},
+  year = {2020},
+  note = {R package version 0.21},
+  url = {https://github.com/rstudio/bookdown},
+}
+
+@Manual{R-GenomeInfoDb,
+  title = {GenomeInfoDb: Utilities for manipulating chromosome names, including modifying
+them to follow a particular naming style},
+  author = {Sonali Arora and Martin Morgan and Marc Carlson and H. Pagès},
+  year = {2020},
+  note = {R package version 1.26.2},
+  url = {https://bioconductor.org/packages/GenomeInfoDb},
+}
+
+@Manual{R-GenomicRanges,
+  title = {GenomicRanges: Representation and manipulation of genomic intervals},
+  author = {P. Aboyoun and H. Pagès and M. Lawrence},
+  year = {2020},
+  note = {R package version 1.42.0},
+  url = {https://bioconductor.org/packages/GenomicRanges},
+}
+
+@Manual{R-IRanges,
+  title = {IRanges: Foundation of integer range manipulation in Bioconductor},
+  author = {H. Pagès and P. Aboyoun and M. Lawrence},
+  year = {2020},
+  note = {R package version 2.24.0},
+  url = {https://bioconductor.org/packages/IRanges},
+}
+
+@Manual{R-knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2020},
+  note = {R package version 1.30},
+  url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-MatrixGenerics,
+  title = {MatrixGenerics: S4 Generic Summary Statistic Functions that Operate on
+Matrix-Like Objects},
+  author = {Constantin Ahlmann-Eltze and Peter Hickey and Hervé Pagès},
+  year = {2020},
+  note = {R package version 1.2.0},
+  url = {https://bioconductor.org/packages/MatrixGenerics},
+}
+
+@Manual{R-matrixStats,
+  title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
+Vectors)},
+  author = {Henrik Bengtsson},
+  year = {2020},
+  note = {R package version 0.57.0},
+  url = {https://github.com/HenrikBengtsson/matrixStats},
+}
+
+@Manual{R-mia,
+  title = {mia: Microbiome analysis},
+  author = {Felix G.M. Ernst and Sudarshan Shetty and Leo Lahti},
+  year = {2020},
+  note = {R package version 0.98.15},
+}
+
+@Manual{R-MicrobiomeExperiment,
+  title = {MicrobiomeExperiment: MicrobiomeExperiment},
+  author = {Felix G.M. Ernst and Nathan D. Olson and Levi Waldron and Marcel Ramos and Héctor {Corrada Bravo} and Jayaram Kancherla},
+  year = {2020},
+  note = {R package version 0.99.0.9014},
+  url = {https://github.com/FelixErnst/MicrobiomeExperiment},
+}
+
+@Manual{R-rmarkdown,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2020},
+  note = {R package version 2.5},
+  url = {https://github.com/rstudio/rmarkdown},
+}
+
+@Manual{R-S4Vectors,
+  title = {S4Vectors: Foundation of vector-like and list-like containers in
+Bioconductor},
+  author = {H. Pagès and M. Lawrence and P. Aboyoun},
+  year = {2020},
+  note = {R package version 0.28.0},
+  url = {https://bioconductor.org/packages/S4Vectors},
+}
+
+@Manual{R-SingleCellExperiment,
+  title = {SingleCellExperiment: S4 Classes for Single Cell Data},
+  author = {Aaron Lun and Davide Risso},
+  year = {2020},
+  note = {R package version 1.12.0},
+}
+
+@Manual{R-SummarizedExperiment,
+  title = {SummarizedExperiment: SummarizedExperiment container},
+  author = {Martin Morgan and Valerie Obenchain and Jim Hester and Hervé Pagès},
+  year = {2020},
+  note = {R package version 1.20.0},
+  url = {https://bioconductor.org/packages/SummarizedExperiment},
+}
+
+@Manual{R-TreeSummarizedExperiment,
+  title = {TreeSummarizedExperiment: a S4 Class for Data with Tree
+Structures},
+  author = {Ruizhu Huang},
+  year = {2020},
+  note = {R package version 1.6.2},
+}
+
+@Manual{R-XVector,
+  title = {XVector: Foundation of external vector representation and manipulation in
+Bioconductor},
+  author = {Hervé Pagès and Patrick Aboyoun},
+  year = {2020},
+  note = {R package version 0.30.0},
+  url = {https://bioconductor.org/packages/XVector},
+}
+
+@Article{Biobase2015,
+  author = {W. Huber and V. J. Carey and R. Gentleman and S. Anders and M. Carlson and B. S. Carvalho and H. C. Bravo and S. Davis and L. Gatto and T. Girke and R. Gottardo and F. Hahne and K. D. Hansen and R. A. Irizarry and M. Lawrence and M. I. Love and J. MacDonald and V. Obenchain and A. K. {Ole's} and H. {Pag`es} and A. Reyes and P. Shannon and G. K. Smyth and D. Tenenbaum and L. Waldron and M. Morgan},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
+}
+
+@Article{BiocGenerics2015,
+  author = {{Huber} and {W.} and {Carey} and V. J. and {Gentleman} and {R.} and {Anders} and {S.} and {Carlson} and {M.} and {Carvalho} and B. S. and {Bravo} and H. C. and {Davis} and {S.} and {Gatto} and {L.} and {Girke} and {T.} and {Gottardo} and {R.} and {Hahne} and {F.} and {Hansen} and K. D. and {Irizarry} and R. A. and {Lawrence} and {M.} and {Love} and M. I. and {MacDonald} and {J.} and {Obenchain} and {V.} and {{Ole's}} and A. K. and {{Pag`es}} and {H.} and {Reyes} and {A.} and {Shannon} and {P.} and {Smyth} and G. K. and {Tenenbaum} and {D.} and {Waldron} and {L.} and {Morgan} and {M.}},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
+}
+
+@Book{bookdown2016,
+  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2016},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
+}
+
+@Article{GenomicRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
+@Article{IRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  note = {ISBN 9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
+
+@Book{rmarkdown2020,
+  title = {R Markdown Cookbook},
+  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2020},
+  note = {ISBN 9780367563837},
+  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{SingleCellExperiment2020,
+  title = {Orchestrating single-cell analysis with Bioconductor},
+  author = {Robert Amezquita and Aaron Lun and Etienne Becht and Vince Carey and Lindsay Carpp and Ludwig Geistlinger and Federico Marini and Kevin Rue-Albrecht and Davide Risso and Charlotte Soneson and Levi Waldron and Herve Pages and Mike Smith and Wolfgang Huber and Martin Morgan and Raphael Gottardo and Stephanie Hicks},
+  year = {2020},
+  volume = {17},
+  pages = {137--145},
+  journal = {Nature Methods},
+  url = {https://www.nature.com/articles/s41592-019-0654-x},
+}
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -7,4 +269,84 @@
   edition = {2nd},
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
+}
+
+@Manual{R-scater,
+  title = {scater: Single-Cell Analysis Toolkit for Gene Expression Data in R},
+  author = {Davis McCarthy and Kieran Campbell and Aaron Lun and Quin Wills},
+  year = {2020},
+  note = {R package version 1.18.3},
+  url = {http://bioconductor.org/packages/scater/},
+}
+
+@Article{scater2017,
+  author = {Davis J. McCarthy and Kieran R. Campbell and Aaron T. L. Lun and Quin F. Willis},
+  title = {Scater: pre-processing, quality control, normalisation and visualisation of single-cell {R}{N}{A}-seq data in {R}},
+  journal = {Bioinformatics},
+  year = {2017},
+  volume = {33},
+  issue = {8},
+  pages = {1179-1186},
+  doi = {10.1093/bioinformatics/btw777},
+}
+
+@Manual{R-dada2,
+  title = {dada2: Accurate, high-resolution sample inference from amplicon
+sequencing data},
+  author = {Benjamin Callahan and Paul McMurdie and Susan Holmes},
+  year = {2020},
+  note = {R package version 1.18.0},
+  url = {http://benjjneb.github.io/dada2/},
+}
+
+@Article{dada22016,
+  title = {DADA2: High-resolution sample inference from Illumina amplicon data},
+  author = {Benjamin J Callahan and Paul J McMurdie and Michael J Rosen and Andrew W Han and Amy Jo A Johnson and Susan P Holmes},
+  journal = {Nature Methods},
+  volume = {13},
+  pages = {581-583},
+  year = {2016},
+  doi = {10.1038/nmeth.3869},
+}
+
+@Manual{R-DECIPHER,
+  title = {DECIPHER: Tools for curating, analyzing, and manipulating biological
+sequences},
+  author = {Erik Wright},
+  year = {2020},
+  note = {R package version 2.18.1},
+}
+
+@Article{DECIPHER2016,
+  title = {Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R},
+  author = {Erik S. Wright},
+  journal = {The R Journal},
+  year = {2016},
+  volume = {8},
+  number = {1},
+  pages = {352-359},
+}
+
+@Manual{R-TreeSummarizedExperiment,
+  title = {TreeSummarizedExperiment: a S4 Class for Data with Tree
+Structures},
+  author = {Ruizhu Huang},
+  year = {2020},
+  note = {R package version 1.6.2},
+}
+
+@Manual{R-vegan,
+  title = {vegan: Community Ecology Package},
+  author = {Jari Oksanen and F. Guillaume Blanchet and Michael Friendly and Roeland Kindt and Pierre Legendre and Dan McGlinn and Peter R. Minchin and R. B. O'Hara and Gavin L. Simpson and Peter Solymos and M. Henry H. Stevens and Eduard Szoecs and Helene Wagner},
+  year = {2020},
+  note = {R package version 2.5-7},
+  url = {https://CRAN.R-project.org/package=vegan},
+}
+
+@Manual{R-ggpubr,
+  title = {ggpubr: ggplot2 Based Publication Ready Plots},
+  author = {Alboukadel Kassambara},
+  year = {2020},
+  note = {R package version 0.4.0},
+  url = {https://rpkgs.datanovia.com/ggpubr/},
 }
