--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Microbiome Analysis"
 documentclass: book
 site: bookdown::bookdown_site
-bibliography: [book.bib, packages.bib]
+bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: microbiome/MiaBook
@@ -48,8 +48,4 @@ knitr::opts_chunk$set(
   fig.width=10,
   dpi=300
 )
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
 ```
