added beta diversity calculation and plotting

--- a/13-microbiome-exploration.Rmd
+++ b/13-microbiome-exploration.Rmd
@@ -145,14 +145,14 @@ x <- addTaxonomyTree(x)
 After some preparation the data is assembled and can be plotted via 
 `plotRowTree`.
 
-```{r plot-prev-prev, message=FALSE, fig.cap="Prevalence of top phyla as jduged by prevalence"}
+```{r plot-prev-prev, message=FALSE, fig.cap="Prevalence of top phyla as judged by prevalence"}
 library(miaViz)
 plotRowTree(x[rowData(x)$Phylum %in% top_phyla,],
             edge_colour_by = "Phylum",
             tip_colour_by = "prevalence",
             node_colour_by = "prevalence")
 ```
-```{r plot-prev-mean, message=FALSE, fig.cap="Prevalence of top phyla as jduged by prevalence"}
+```{r plot-prev-mean, message=FALSE, fig.cap="Prevalence of top phyla as judged by mean abundance"}
 plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
             edge_colour_by = "Phylum",
             tip_colour_by = "prevalence",
