--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -22,12 +22,12 @@ se <- GlobalPatterns
 
 ## Alpha diversity
 
-_Alpha diversity_, also sometimes interchangeably used with the terms 
-_species diversity_ or _species richness_, summarizes the number different
-species and their abundance per sample into a single number.
+**_Alpha diversity_**, also sometimes interchangeably used with the terms
+**_species diversity_** or **_species richness_**, summarizes the number
+different species and their abundance per sample into a single number.
 
 For this purpose wrapper functions are available interacting with other packages
-implementing the calculation, such as _vegan_ [@R-vegan].
+implementing the calculation, such as `_vegan_` [@R-vegan].
 
 `estimateAlphaDiversity` is the main function for this purpose, which calculates
 the selected diversity based on the selected assay data and adds it to the 
@@ -40,7 +40,7 @@ head(colData(se)$shannon)
 ```
 
 This allows the values to analyzed directly from the `colData`, for example
-by plotting them using `plotColData` from the _scater_ package [@R-scater].
+by plotting them using `plotColData` from the `_scater_` package [@R-scater].
 
 ```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type."}
 library(scater)
@@ -71,7 +71,7 @@ ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 3, common.legend = TRUE, le
 In comparison to alpha diversities, beta diversities describe inter-microbiome
 (dis-)similarites. Technically speaking, beta diversities are usually
 represented as `dist` objects, which contain triangular data describing the
-distance between each pair of samples. These distances are than subjected to
+distance between each pair of samples. These distances can be subjected to
 multi-dimensional scaling, also known as PCoA, to retrieve reduced dimensions
 for further evaluation or visualization.
 
@@ -122,9 +122,7 @@ se <- runMDS2(se, FUN = calculateUniFrac, name = "UniFrac",
               ntop = nrow(se))
 ```
 
-Plotting can be performed again using `plotReducedDim`.
-
-```{r plot-unifrac}
+```{r plot-unifrac, fig.cap="UniFrac distances scaled by MDS of the GlobalPattern dataset."}
 plotReducedDim(se, "UniFrac", colour_by = "SampleType")
 ```
 
@@ -154,7 +152,69 @@ plotReducedDim(se, "TSNE", colour_by = "SampleType", ncomponents = c(1:3))
 
 ## Community comparisons
 
-PERMANOVA and other methods.
+TODO: Introduction
+
+```{r, message=FALSE}
+library(microbiomeDataSets)
+se.lahti <- LahtiMData()
+```
+
+```{r}
+se.lahti <- relAbundanceCounts(se.lahti)
+se.lahti <- runNMDS(se.lahti, FUN = vegan::vegdist, name = "BC", nmdsFUN = "monoMDS",
+                    exprs_values = "relabundance",
+                    keep_dist = TRUE)
+```
+
+```{r}
+plotReducedDim(se.lahti, "BC", colour_by = "group")
+```
+
+TODO: Conclusion
+
+### PERMANOVA - significance test for group-level differences
+
+TODO: Introduction, References
+
+```{r}
+library(vegan)
+permanova <- vegan::adonis(t(assay(se.lahti,"relabundance")) ~ group,
+                           data = colData(se.lahti),
+                           permutations = 9999)
+
+# P-value
+print(as.data.frame(permanova$aov.tab)["group", "Pr(>F)"])
+```
+
+```{r}
+coef <- coefficients(permanova)["group1",]
+top.coef <- sort(head(coef[rev(order(abs(coef)))],20))
+```
+
+TODO: Conclusion
+
+```{r plot-top-coef-anova, fig.cap=""}
+ggplot(data.frame(x = top.coef,
+                  y = factor(names(top.coef),
+                                      unique(names(top.coef)))),
+        aes(x = x, y = y)) +
+    geom_bar(stat="identity") +
+    labs(x="",y="",title="Top Taxa") +
+    theme_bw()
+```
+
+TODO: Conclusion
+
+### PERMDISP2 - Checking the homogeneity condition
+
+TODO: Introduction, References
+
+```{r}
+anova(vegan::betadisper(attr(reducedDim(se.lahti,"BC"),"dist"),
+                        colData(se.lahti)$group))
+```
+
+TODO: Conclusion
 
 ## Further reading
 
