--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -6,7 +6,17 @@ chapterPreamble()
 ```
 
 
-## Alpha diversity
+## Alpha diversity indices
+
+### Richness
+
+### Evenness
+
+### Diversity
+
+### Dominance
+
+
 
 
 
@@ -17,6 +27,7 @@ chapterPreamble()
 
 PERMANOVA and other methods.
 
+Can you add introductions and conclusions to the PERMANOVA and PERMDISP2 as indicated?
 
 ### Visualizing beta diversity
 
